1999-01-17  Harri Porten  <porten@kde.org>

	* modeminfo.cpp: ATI1 was left out. Wait 0.1 secs to process the ATE0.

1999-01-12  Harri Porten  <porten@kde.org>

	* connect.cpp: become the session leader and let ttySx be the
	controlling terminal before launching pppd. This might solve
	timeout problems several people reported, ie. when kppp was
	started from kpanel instead of a terminal window.
	* main.cpp: the kppp.sh workaround for make_directories() isn't
	needed anymore and confused a few people.
	* requester.cpp: convert cmsglen to size_t to make the compiler happy.
	* modem.cpp: fixed usleep() replacement in case #ifndef HAVE_USLEEP
	* connect.cpp: saving of old_hostname was broken

1999-01-10  Mario Weilguni <mweilguni@kde.org>

	* complete rework of the accounting system. The old implementation
	did only allow one type of accounting (=via rulefiles). The new
	will allow executable rulefiles too.
	
1999-01-06  Mario Weilguni <mweilguni@kde.org>

	* added new hungarian rules
	* the title of the main window was "kppp.bin". Fixed this.
	* the combobox for selecting the account to dial in was
	editable for some strange reason. Fixed.
	* modified the testing stuff (-T now)

1999-01-04  Mario Weilguni <mweilguni@kde.org>

	* began to add a modem database. See README.ModemDB for
	details. The modem DB will not make it into KDE 1.1 (sorry)

1999-01-05  Harri Porten  <porten@kde.org>

	* opener.cpp: set O_NOCTTY flag when opening the modem device to
	hinder the server process from being assigned a controlling terminal
        (and 'stealing' it from pppd ?)
	* pppdata.h: renamed "LockFile" key to "UseLockFile" to prevent a
	clash with kppprc's from KDE 1.0. (reported by Seth Rothberg
	<sethr@crocker.com>)
        * umask(0) in suid child to avoid permission conflicts with lock file.
	* connect.cpp,opener.*,requester.*: moved call to sethostname()
	into Opener. Bug discovered by Matthew Ando <ando@math.jhu.edu>


1999-01-04  Mario Weilguni <mweilguni@kde.org>
