@@ -80,6 +80,9 @@
 // Define the maximun number of DNS entries
 #define MAX_DNS_ENTRIES 5
 
+// Maximum size of the command executing pppd
+const unsigned int MAX_CMDLEN = 2024;
+
 // Define the maximum number of arguments passed to the pppd daemon
 #define MAX_PPPD_ARGUMENTS 20
 
