@@ -46,7 +46,6 @@ public:
   Modem();
   ~Modem();
 
-  int  fd() { return modemfd; }
   bool opentty();
   bool closetty();
   bool hangup();
